# FMitF_rs

./: .gitignore  AST_OUTPUT_FORMAT.md  AST_REFACTORING_SUMMARY.md  BOOGIE_INTEGRATION_SUMMARY.md  Cargo.toml  DATA_COLLECTION.md  README.md  VERIFICATION_IMPLEMENTATION.md  a.dot  benchmark_analysis.ipynb  benchmark_pipeline.ipynb  commutative_f13_i0_h0_vs_f14_i1_h1.bpl  commutative_simple_hop11_vs_hop13.bpl  conflict.dot  factor_analysis.ipynb  grammar.md  known_bugs.md  output_folder.sh  run_benchmark.sh  run_tpcc.sh  test_boogie.bpl  test_nested_map_syntax.bpl  test_wrong_nested_map_syntax.bpl  verification_rewrite_summary.md
.github/: copilot-instructions.md
boogie_examples/: UUID.bpl  basic.bpl  basic.smt2  controlflow.bpl  error.bpl  ext.bpl  goto.bpl  int2real.bpl  iterator.bpl  learn_boogie.bpl  list.bpl  minimal.bpl  minimal_split_nonprogress.bpl  minimal_wrong.bpl  nested_map.bpl  row.bpl  string.bpl
db_engine/: README.md  go.mod  go.sum  runRubis.go  runSocial.go  runTPCC.go  startServer.go
doc/: 2f.md  ast.md  gen_Boogie.rs  go_codegen_guidelines.md  goto.md  invariants.md  thoughts.md  verification.md
examples/: README.md  ast_test.transact  conflict.transact  custom_operators_test.transact  gen_transact.md  gen_transact.py  optimization_test.transact  prelude.transact  resolution_test.transact  rubis.transact  simple.transact  simple_custom_operators.transact  simple_test.transact  simple_test2.transact  social.transact  social_test.transact  test_array.transact  test_constants.transact  test_minimal.transact  test_non_commutative.transact  (+12 more)
(+396 files in other folders)
