[package]
name = "FMitF_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
petgraph = "0.8"
clap = { version = "4", features = ["derive"] }
clap-repl = "0.3"
chrono = { version = "0.4", features = ["serde"] }
id-arena = "2.2"
ordered-float = { version = "5.0", default-features = false }
